@@ -1,3 +1,8 @@
+2004-04-22  Bradley Bell  <btb@icculus.org>
+
+	* include/byteswap.h: rewrite GET_INTEL_* macros, fix bugs in
+	aligned version of PUT_INTEL_* macros
+
 2004-04-15  Bradley Bell  <btb@icculus.org>
 
 	* main/inferno.c: comment out unused checksum variable
